# torch-training

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pytorch_training/classifier/: binary.py  multi_class.py
src/pytorch_training/classifier/base/: __init__.py  _training_runner.py  train_classifier.py
src/pytorch_training/model_hooks/: after_train_on_batch.py
src/pytorch_training/training/: binary_classifier.py  multi_class_classifier.py
src/pytorch_training/training/base/: __init__.py  base_classifier.py  model_checkpoint_handler.py
src/pytorch_training/training_hooks/: after_train_on_batch.py
src/torch_training/: history.py
src/torch_training/classifier/: binary.py  multi_class.py
src/torch_training/classifier/base/: _training_runner.py  model_checkpoint_handler.py  none_lr_scheduler.py  protocols.py  train_classifier.py  training_runner.py
src/torch_training/classifier/distillation/soft_target/: binary.py  multi_class.py
src/torch_training/losses/: __init__.py  ce_distillation_loss.py
src/torch_training/training_hooks/: __init__.py
tests/: test_history.py
tests/classifier/base/: test_model_checkpoint_handler.py
